--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/menge_vendor
-	previous = 
-	base = 7036d83
+	previous = 7036d83
+	base = be4d590
 	trim = 
 	trimbase = 
