--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/menge_vendor
-	previous = 
-	base = 0ba4e6e
+	previous = 0ba4e6e
+	base = cefcbd3
 	trim = 
 	trimbase = 
