--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/menge_vendor
-	previous = 
-	base = cbd5223
+	previous = cbd5223
+	base = b8362bd
 	trim = 
 	trimbase = 
