--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/menge_vendor
-	previous = 
-	base = d325eff
+	previous = d325eff
+	base = 38ea275
 	trim = 
 	trimbase = 
