--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/menge_vendor
-	previous = 
-	base = 288f084
+	previous = 288f084
+	base = 900444b
 	trim = 
 	trimbase = 
