Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-2": ["Tue Feb 08 2022", "Shao Guoliang", "fredshao@openrobotics.org"]}
+{"1.0.0-3": ["Tue Apr 19 2022", "Shao Guoliang", "fredshao@openrobotics.org"], "1.0.0-2": ["Tue Feb 08 2022", "Shao Guoliang", "fredshao@openrobotics.org"]}
