--- a/tracks.yaml
+++ b/tracks.yaml
@@ -76,8 +76,7 @@ tracks:
     ros_distro: humble
     vcs_type: git
     vcs_uri: https://github.com/open-rmf/menge_vendor.git
-    version: 1.0.0
-    version_saved: :{auto}
+    version: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
