--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/menge_vendor
-	previous = 
-	base = bc42b2c
+	previous = bc42b2c
+	base = 2221935
 	trim = 
 	trimbase = 
