--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/menge_vendor
-	previous = 
-	base = 9f6e253
+	previous = 9f6e253
+	base = 25907ea
 	trim = 
 	trimbase = 
