--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/menge_vendor
-	previous = 
-	base = 26477f4
+	previous = 26477f4
+	base = 416844d
 	trim = 
 	trimbase = 
