--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/menge_vendor
-	previous = 
-	base = 1837067
+	previous = 1837067
+	base = 4899b3c
 	trim = 
 	trimbase = 
