--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.1.0": ["Shao Guoliang", "fredshao@openrobotics.org"], "1.0.0": ["Shao Guoliang", "fredshao@openrobotics.org"]}
+{"1.1.1": ["Shao Guoliang", "fredshao@openrobotics.org"], "1.1.0": ["Shao Guoliang", "fredshao@openrobotics.org"], "1.0.0": ["Shao Guoliang", "fredshao@openrobotics.org"]}
