--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/menge_vendor
-	previous = 
-	base = 1301694
+	previous = 1301694
+	base = 24df521
 	trim = 
 	trimbase = 
