--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/menge_vendor
-	previous = 
-	base = 9f49391
+	previous = 9f49391
+	base = adc4adf
 	trim = 
 	trimbase = 
