--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/menge_vendor
-	previous = 
-	base = 5748e79
+	previous = 5748e79
+	base = b5affe0
 	trim = 
 	trimbase = 
