--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/menge_vendor
-	previous = 
-	base = 151c999
+	previous = 151c999
+	base = b56dad1
 	trim = 
 	trimbase = 
