--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.2.0-2": ["Wed Mar 06 2024", "Shao Guoliang", "fredshao@openrobotics.org"]}
+{"1.2.0-3": ["Thu Apr 18 2024", "Shao Guoliang", "fredshao@openrobotics.org"], "1.2.0-2": ["Wed Mar 06 2024", "Shao Guoliang", "fredshao@openrobotics.org"]}
