--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.0-1": ["Thu Jun 13 2024", "Shao Guoliang", "fredshao@openrobotics.org"], "1.2.0-2": ["Wed Mar 06 2024", "Shao Guoliang", "fredshao@openrobotics.org"]}
+{"1.3.0-2": ["Tue Apr 22 2025", "Shao Guoliang", "fredshao@openrobotics.org"], "1.3.0-1": ["Thu Jun 13 2024", "Shao Guoliang", "fredshao@openrobotics.org"], "1.2.0-2": ["Wed Mar 06 2024", "Shao Guoliang", "fredshao@openrobotics.org"]}
